@@ -30,6 +30,7 @@
     
     <article>
       <h2>My Thanks for an Updated <i>Doctor Who</i> Timeline</h2>
+      <p><b>8-10-24</b></p>
       <p>I would like to express my thanks to Tim Bradley over at <a href="https://bradleybasement.wordpress.com/">Bradley's Basement</a> for keeping his amazing <i>Doctor Who</i> timelines up to date. I found them awhile ago, 
       and have been using them as a reference for when events occur in the Doctor's personal timeline, and for listening to the Big Finish Audio Dramas in order. It really has been an incredibly useful resource and I couldn't 
       thank him enough.</p>
@@ -41,6 +42,7 @@
     
     <article>
       <h2><i>Star Wars: The Bad Batch</i> Season 3 thoughts</h2>
+      <p><b>8-6-24</b></p>
       <p>This season of <i>The Bad Batch</i> was absolutely amazing, with so many highs and lows, and everthing in between, the return of crosshair was awesome, and the ending was just so, so very good.</p>
       <p>One of my favorite parts is the Reunion episode which was great, with all the dynamics of someone who was initially good, then bad, returning and becoming better. I loved the send off so much because it just shows the 
       close of one chapter, and the opening of another.</p>
@@ -51,7 +53,7 @@
     
     <article>
       <h2>The Impact that <i>Avenged Sevenfold</i>'s Music has had on Me</h2>
-      <p><b>8-5-23</b></p>
+      <p><b>8-5-24</b></p>
       <p><i>Avenged Sevenfold</i> are to me, masters of the genre, who really know how to create absolute bangers that can wrench at your heart and will tell a story that can change how you look at things.</p>
       <p>When I was first introduced to <i>Avenged Sevenfold</i> in my Sophmore year of High-School (2019), their music took me by storm. At that point in time I was new to Metal as a genre, I had started out with 
       Nu-Metal and Death Metal bands like <i>Slipknot</i> and <i>Orbit Culture</i>, but when I was told there was a band that did Call of Duty (specifically Black Ops) tie-in songs, I was skeptical that it would be good. 
