@@ -147,7 +147,7 @@
         <summary>Currently Stuck in my Head</summary>
         <ul>
           <li>March of the Resistance - John Williams</li>
-          <li>M.I.A. - Avenged Sevenfold</li>
+          <li>Buried Alive - Avenged Sevenfold</li>
         </ul>
       </details>
       
@@ -168,9 +168,10 @@
       
       <h3>Favorites</h3>
       <ul>
-        <li>The Hobbit - J.R.R Tolkien</li>
-        <li>Ender's Game - Orson Scott Card</li>
-        <li>Starflight - Melissa Landers</li>
+        <li>The Hobbit by J.R.R Tolkien</li>
+        <li>Ender's Game by Orson Scott Card</li>
+        <li>Starflight by Melissa Landers</li>
+        <li>Ready Player One by Ernest Cline</li>
       </ul>
         
       
